# vapoursynth-zipcu

./: .gitignore  README.md  build.zig  build.zig.zon  hatch_build.py  pyproject.toml
.github/: smoke.py
.github/workflows/: build.yaml
cudaz/: Readme.md  build.zig  build.zig.zon
cudaz/example/custom_type/: build.zig
cudaz/example/custom_type/src/: main.zig
cudaz/example/increment/: build.zig
cudaz/example/increment/src/: main.zig
cudaz/src/: compile.zig  cufft.zig  device.zig  driver.zig  dynlib.zig  error.zig  lib.zig  nvrtc.zig  rng.zig  wrappers.zig
cudaz/test/: driver.zig  general.zig  rng.zig
src/: bilateral.zig  bm3d.cu  bm3d.zig  bm3d_vagg.cu  cu.zig  deband.cu  deband.zig  dfttest.cu  dfttest.zig  eedi3.cu  eedi3.zig  fgrain.cu  fgrain.zig  framecache.zig  gaussblur.cu  gaussblur.zig  kernel.cu  nlmeans.cu  nlmeans.zig  nnedi3.cu  nnedi3.zig  plugin.zig  pool.zig  vsutil.zig
