[build-system]
requires = ["hatchling>=1.29.0", "packaging", "ziglang==0.16.0"]
build-backend = "hatchling.build"

[project]
name = "vapoursynth-vszipcu"
description = "VapourSynth Zig Image Process — CUDA"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
# The NVRTC dependency is injected by hatch_build.py based on the CUDA_MAJOR env var
# (default 13). See [project.optional-dependencies] for the concrete options.
dependencies = ["VapourSynth>=75"]
dynamic = ["version"]

[project.optional-dependencies]
cuda12 = ["nvidia-cuda-nvrtc-cu12"]
cuda13 = ["nvidia-cuda-nvrtc>=13"]

[tool.hatch.version]
source = "regex"
path = "build.zig.zon"
pattern = '\.version\s*=\s*"(?P<version>[^"]+)"'

# cudaz is a path dependency of build.zig.zon — ship only what its build.zig.zon `.paths`
# lists (build.zig imports test/utils.zig). Do not pack example/, .zig-cache/, or demos.
[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "cudaz/build.zig",
    "cudaz/build.zig.zon",
    "cudaz/src",
    "cudaz/test",
    "cudaz/LICENSE.md",
    "cudaz/Readme.md",
    "build.zig",
    "build.zig.zon",
    "README.md",
    "hatch_build.py",
]
exclude = [
    "**/.zig-cache",
    "**/zig-out",
]

[tool.hatch.build.targets.wheel]
include = ["vapoursynth/plugins/vszipcu"]
artifacts = [
    "vapoursynth/plugins/vszipcu/*.so",
    "vapoursynth/plugins/vszipcu/*.dll",
    "vapoursynth/plugins/vszipcu/manifest.vs",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
